<resources>
    <string name="app_name" translatable="false">JordanM</string>
    <string name="firstNameText" translatable="false">Marie-Joseph</string>
    <string name="lastNameText" translatable="false">Capou</string>
    <string name="classroomText" translatable="false">Master 2 CCM (2021/2022)</string>
    <string name="firstName">Prénom:</string>
    <string name="lastName">Nom:</string>
    <string name="classroom">Promo:</string>
    <string name="list">liste</string>
    <string name="firebase" translatable="false">Firebase</string>
    <string name="version">Version par défaut</string>
    <string name="connexion">S\'identifier</string>
    <string name="inscription">S\'inscrire.</string>
    <string name="email">Adresse mail</string>
    <string name="password">Mot de passe</string>
    <string name="signout">Se déconnecter</string>
    <string name="signin_signout">Connexion/Déconnexion</string>
    <string name="uid">Votre UID: </string>
    <string name="addRestaurant">"add "</string>
    <string name="deleteRestaurant">delete</string>
    <string name="password_comfim">Comfirmez mot de passe</string>
</resources>