<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/home_page_avatar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/home_page_lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_page_avatar"
        app:layout_constraintVertical_bias="0.075" />

    <TextView
        android:id="@+id/home_page_lastname_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastNameText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.334"
        app:layout_constraintStart_toEndOf="@+id/home_page_firstname"
        app:layout_constraintTop_toBottomOf="@+id/home_page_avatar"
        app:layout_constraintVertical_bias="0.075" />

    <TextView
        android:id="@+id/home_page_firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.229"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_page_lastname"
        app:layout_constraintVertical_bias="0.047" />

    <TextView
        android:id="@+id/home_page_firstname_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstNameText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toEndOf="@+id/home_page_firstname"
        app:layout_constraintTop_toBottomOf="@+id/home_page_lastname_text"
        app:layout_constraintVertical_bias="0.047" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/classroom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.224"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_page_firstname"
        app:layout_constraintVertical_bias="0.053" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/classroomText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.783"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/home_page_firstname_text"
        app:layout_constraintVertical_bias="0.053" />

    <Button
        android:id="@+id/home_page_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.4" />

    <Button
        android:id="@+id/home_page_firebase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firebase"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toEndOf="@+id/home_page_list"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.416" />

    <TextView
        android:id="@+id/homePageVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.917" />


</androidx.constraintlayout.widget.ConstraintLayout>